# demo-uv-python

./: README.md  main.py  pyproject.toml
demo1/: app.py
demo2/: app.py  batch-insert.py
demo2/instance/: api.db
demo3/: .http  config.py  dev.db  run.py
demo3/app/: __init__.py  extensions.py  models.py  schemas.py  utils.py
demo3/app/views/: __init__.py  endpoints.py  health.py  post.py  tag.py  user.py
demo3/migrations/versions/: 2b624053d1fe_add_tag_modal.py  dffc19c9ec0c_add_updated_at_field_to_post_model.py
demo3/tests/: conftest.py  test_endpoints.py  test_health.py  test_models.py  test_post.py  test_tag.py  test_user.py
scripts/: batch-insert.py
